iptables_backup.conf
# Generated by iptables-save v1.8.9 (nf_tables) on Tue Dec  3 15:10:39 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [528:102810]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -s 10.0.0.2/32 -j DROP
-A INPUT -p tcp -m tcp --dport 1234 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-b8440ea483c9 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-b8440ea483c9 -j DOCKER
-A FORWARD -i br-b8440ea483c9 ! -o br-b8440ea483c9 -j ACCEPT
-A FORWARD -i br-b8440ea483c9 -o br-b8440ea483c9 -j ACCEPT
-A FORWARD -o br-6d5427d6d14d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-6d5427d6d14d -j DOCKER
-A FORWARD -i br-6d5427d6d14d ! -o br-6d5427d6d14d -j ACCEPT
-A FORWARD -i br-6d5427d6d14d -o br-6d5427d6d14d -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-b8440ea483c9 ! -o br-b8440ea483c9 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-6d5427d6d14d ! -o br-6d5427d6d14d -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-b8440ea483c9 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-6d5427d6d14d -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Tue Dec  3 15:10:39 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Tue Dec  3 15:10:39 2024
*nat
:PREROUTING ACCEPT [1:68]
:INPUT ACCEPT [1:68]
:OUTPUT ACCEPT [107:10256]
:POSTROUTING ACCEPT [107:10256]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-b8440ea483c9 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-6d5427d6d14d -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-b8440ea483c9 -j RETURN
-A DOCKER -i br-6d5427d6d14d -j RETURN
COMMIT
# Completed on Tue Dec  3 15:10:39 2024
